--- a/about.html
+++ b/about.html
@@ -75,18 +75,13 @@
                 <div class="col-xs-12 col-md-6">
                   <h3>Euan Goodbrand</h3>
                   <p>I am a software developer.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Passion for Visual Effects </h3>
+                  <p>I love to create visual effects in my free time such as the JellyFish animation seen on the homepage.</h3>
                   <p>
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis
-                    blandit. Cras ultrices hendrerit nisl.</p>
+                    I am constantly pursuing new technologies and would love to connect with like minded people. Feel free to connect through my socials below!</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Euan Goodbrand.jpeg" class="img-responsive" alt="">
+                  <img src="./assets/Euan Goodbrand.jpeg" class="img-responsive" alt="">
                 </div>
 
               </div>
