Added new images
Added new images

--- a/project1-dungeon.html
+++ b/project1-dungeon.html
@@ -79,7 +79,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <img src="./assets/images/roguelike_dungeon_banner.png" class="img-responsive" alt=""
+          <img src="./assets/roguelike_dungeon_banner.png" class="img-responsive" alt=""
             style="display: block; margin: auto;">
           <div class="card-container">
             <div class="text-center">
@@ -105,25 +105,25 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/ca_group.png" class="img-responsive" alt="">
+              <img src="./assets/ca_group.png" class="img-responsive" alt="">
               <p>Cellular Automata Dungeon Examples</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/bsp_group.png" class="img-responsive" alt="">
+              <img src="./assets/bsp_group.png" class="img-responsive" alt="">
               <p>Binary Space Partitioning Dungeon Examples</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/mst_dungeon_group.png" class="img-responsive" alt="">
+              <img src="./assets/mst_dungeon_group.png" class="img-responsive" alt="">
               <p>Minimum Spanning Tree Dungeon Examples</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./assets/images/main_dungeon_output.png" class="img-responsive" alt="">
+              <img src="./assets/main_dungeon_output.png" class="img-responsive" alt="">
               <p>Example Dungeon Output of Softwarae in Sandbox Game</p>
             </div>
           </div>
         </div>
         <div class="col-xs-12">
-          <img src="./assets/images/Flow Diagram.png" class="img-responsive" alt=""
+          <img src="./assets/Flow Diagram.png" class="img-responsive" alt=""
             style="display: block; margin: auto; width: 50%;">
         </div>
       </div>
