Resume now opens in new tab
Resume now opens in new tab

--- a/project3-mentor-mentee.html
+++ b/project3-mentor-mentee.html
@@ -69,7 +69,7 @@
             <li><a href="./works.html" title="">Projects</a></li>
             <li><a href="./about.html" title="">About me</a></li>
             <li><a href="./contact.html" title="">Contact</a></li>
-            <li><a href="./resume.html" title="">Resume/CV</a></li>
+            <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
           </ul>
         </div>
       </div>
