--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <style>
   .navbar {
-    min-height: 80px;/
+    min-height: 80px;
   }
 
   .navbar .nav>li>a {
@@ -34,17 +34,27 @@
     background-size: cover;
     background-position: center;
   }
+
+  #background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translate(-50%, -50%);
+    background: url('./assets/jellyfish.png') no-repeat;
+    background-size: cover;
+  }
+
 </style>
 
 <script type="text/javascript" src="./main.70a66962.js"></script>
 
 <script>
   window.onload = function () {
-    const img = new Image();
-    img.src = './assets/jellyfish.gif';
-    img.onload = function () {
-      document.body.style.backgroundImage = `url(${img.src})`;
-    }
 
     setTimeout(function() {
       document.getElementById('greeting').style.display = 'none';
@@ -52,13 +62,14 @@
   };
 </script>
 
-
-
-<body class="minimal" id="background-image" style="background-image: url('./assets/jellyfish.png')">
+<body class="minimal">
   <div id="site-border-left"></div>
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
+  <video autoplay loop muted id="background-video">
+    <source src="./assets/jellyfish.mp4" type="video/mp4">
+  </video>
   <header>
     <nav class="navbar  navbar-fixed-top navbar-inverse">
       <div class="container">
