--- a/contact.html
+++ b/contact.html
@@ -10,65 +10,96 @@
 
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Euan Goodbrand</title>  
+  <title>Euan Goodbrand</title>
 
-<link href="./main.3f6952e4.css" rel="stylesheet"></head>
+  <link href="./main.3f6952e4.css" rel="stylesheet">
+</head>
 <style>
   .navbar {
     min-height: 80px;
   }
 
-  .navbar .nav > li > a {
-    padding-top: 0px; 
-    padding-bottom: 0px; 
-    font-size: 20px; 
+  .navbar .nav>li>a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-size: 20px;
   }
 
   .navbar-header {
-    height: 80px; 
+    height: 80px;
+  }
+
+  body {
+    background-size: cover;
+    background-position: center;
+  }
+
+  #background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translate(-50%, -50%);
+    background: url('./assets/jellyfish.png') no-repeat;
+    background-size: cover;
+  }
+
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .navbar-nav {
+    float: none;
   }
 </style>
+
 <body class="">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
-<header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
-    <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+  <div id="site-border-left"></div>
+  <div id="site-border-right"></div>
+  <div id="site-border-top"></div>
+  <div id="site-border-bottom"></div>
+  <header>
+    <nav class="navbar  navbar-fixed-top navbar-default">
+      <div class="container">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+          aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./works.html" title="">Projects</a></li>
-          <li><a href="./about.html" title="">About me</a></li>
-          <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
-        </ul>
-
-
-      </div> 
-    </div>
-  </nav>
-</header>
-
-<div class="section-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="section-container-spacer text-center">
-          <h1 class="h2">Contact me</h1>
+        <div class="navbar-container">
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav ">
+              <li><a href="./index.html" title="">Home</a></li>
+              <li><a href="./works.html" title="">Projects</a></li>
+              <li><a href="./about.html" title="">About me</a></li>
+              <li><a href="./contact.html" title="">Contact</a></li>
+              <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
+            </ul>
+          </div>
         </div>
-        
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-             <form action="https://formspree.io/f/mqkorpdd" method="POST" id="contactForm" class="reveal-content">
+      </div>
+    </nav>
+  </header>
+
+  <div class="section-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="section-container-spacer text-center">
+            <h1 class="h2">Contact me</h1>
+          </div>
+
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <form action="https://formspree.io/f/mqkorpdd" method="POST" id="contactForm" class="reveal-content">
                 <div class="row">
                   <div class="col-md-7">
                     <div class="form-group">
@@ -78,7 +109,8 @@
                       <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject">
                     </div>
                     <div class="form-group">
-                      <textarea class="form-control" name="message" rows="5" placeholder="Enter your message"></textarea>
+                      <textarea class="form-control" name="message" rows="5"
+                        placeholder="Enter your message"></textarea>
                     </div>
                     <input type="hidden" name="_subject" id="emailSubject" value="">
                     <button type="submit" class="btn btn-default btn-lg">Send</button>
@@ -115,35 +147,36 @@
                 </div>
               </form>
               <script>
-                document.getElementById('contactForm').addEventListener('submit', function() {
+                document.getElementById('contactForm').addEventListener('submit', function () {
                   document.getElementById('emailSubject').value = document.getElementById('subject').value;
                 });
               </script>
+            </div>
           </div>
         </div>
-     </div>
-    </div>
-  </div>
-</div>
-
-
-
-<footer class="footer-container text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>© 2023 Euan Goodbrand</p>
       </div>
     </div>
   </div>
-</footer>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     navActivePage();
-  });
-</script>
 
-<script type="text/javascript" src="./main.70a66962.js"></script></body>
+
+  <footer class="footer-container text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <p>© 2023 Euan Goodbrand</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      navActivePage();
+    });
+  </script>
+
+  <script type="text/javascript" src="./main.70a66962.js"></script>
+</body>
 
 </html>
