--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
     background-size: cover;
   }
 
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .navbar-nav {
+    float: none;
+  }
+
 </style>
 
 <script type="text/javascript" src="./main.70a66962.js"></script>
@@ -81,14 +91,16 @@
           <span class="icon-bar"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./works.html" title="">Projects</a></li>
-            <li><a href="./about.html" title="">About me</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
-            <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
-          </ul>
+        <div class="navbar-container">
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav ">
+              <li><a href="./index.html" title="">Home</a></li>
+              <li><a href="./works.html" title="">Projects</a></li>
+              <li><a href="./about.html" title="">About me</a></li>
+              <li><a href="./contact.html" title="">Contact</a></li>
+              <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
