--- a/project2-ecf.html
+++ b/project2-ecf.html
@@ -17,17 +17,46 @@
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 <style>
   .navbar {
-    min-height: 80px; 
+    min-height: 80px;
   }
 
-  .navbar .nav > li > a {
-    padding-top: 0px; 
-    padding-bottom: 0px; 
-    font-size: 20px; 
+  .navbar .nav>li>a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-size: 20px;
   }
 
   .navbar-header {
-    height: 80px; 
+    height: 80px;
+  }
+
+  body {
+    background-size: cover;
+    background-position: center;
+  }
+
+  #background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translate(-50%, -50%);
+    background: url('./assets/jellyfish.png') no-repeat;
+    background-size: cover;
+  }
+
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .navbar-nav {
+    float: none;
   }
 </style>
 
@@ -63,6 +92,8 @@
           <span class="icon-bar"></span>
         </button>
 
+      <div class="navbar-container">
+
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">Home</a></li>
@@ -71,6 +102,7 @@
           <li><a href="./contact.html" title="">Contact</a></li>
           <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
         </ul>
+      </div> 
       </div> 
     </div>
   </nav>
