--- a/project5-rental.html
+++ b/project5-rental.html
@@ -30,6 +30,35 @@
   .navbar-header {
     height: 80px;
   }
+
+  body {
+    background-size: cover;
+    background-position: center;
+  }
+
+  #background-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translate(-50%, -50%);
+    background: url('./assets/jellyfish.png') no-repeat;
+    background-size: cover;
+  }
+
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .navbar-nav {
+    float: none;
+  }
 </style>
 
 <style>
@@ -62,17 +91,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./works.html" title="">Projects</a></li>
-            <li><a href="./about.html" title="">About me</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
-            <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
-          </ul>
-
-
+        <div class="navbar-container">
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav ">
+              <li><a href="./index.html" title="">Home</a></li>
+              <li><a href="./works.html" title="">Projects</a></li>
+              <li><a href="./about.html" title="">About me</a></li>
+              <li><a href="./contact.html" title="">Contact</a></li>
+              <li><a href="./resume.html" title="" target="_blank">Resume/CV</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
