Fixed description of project.
Fixed description of project- 3D project.

--- a/project6-3d.html
+++ b/project6-3d.html
@@ -128,7 +128,7 @@
 
             <blockquote>
               <p>3D Renderer, Animation, Lighting, Rasterisation and more... </p>
-              <small class="pull-right">In this OpenGL project, I've designed a 3D advertisement scene for a novel range
+              <small class="pull-right">In this OpenGL project, I've designed a 3D scene for a novel range
                 of alien-animal lamps.
                 The project includes a meticulously built room with diverse elements like walls, a floor, a large
                 window, a table, a dynamic egg-like object,
