--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <embed src="./assets/Euan Goodbrand Resume.pdf" type="application/pdf" />
+    <embed src="./assets/Euan Goodbrand Resume- 02-08-2023.pdf" type="application/pdf" />
 </body>
 </html>
