Fixed Project Titles
Project titles and text were incorrect, not matching up to the projects or their icons.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
                             <p>I've dedicated myself to crafting software
                                 solutions that address real-world problems.
                                 Whether it's a sleek mobile app or a robust OS,
-                                my aim is to bridge people's needs with technical
+                                my aim is to bridge people's needs with
+                                technical
                                 innovation.</p>
                         </div>
                     </div>
@@ -250,7 +251,8 @@
                             <p>My passion lies in combining aesthetics with
                                 utility. Through disciplines like UI/UX and
                                 graphic design, I bring things to life, ensuring
-                                 audiences enjoy interacting with them in the digital
+                                audiences enjoy interacting with them in the
+                                digital
                                 realm.</p>
                         </div>
                     </div>
@@ -404,7 +406,8 @@
                         <div class="gallery-single fix">
                             <div class="gallery-title"
                                 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-weight: bold; text-shadow: 5px 5px 5px rgba(0, 0, 0, 1); text-align: center;">
-                                Extenuating Circumstances Form System</div>
+
+                                AI Movie Review Interpreter</div>
 
                             <img src="uploads/movie-review-bg.png"
                                 class="img-fluid" alt="Image">
@@ -423,7 +426,7 @@
                         <div class="gallery-single fix">
                             <div class="gallery-title"
                                 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-weight: bold; text-shadow: 5px 5px 5px rgba(0, 0, 0, 1); text-align: center;">
-                                AI Movie Review Interpreter</div>
+                                Extenuating Circumstances Form System</div>
 
                             <img src="uploads/ecf2-bg.png" class="img-fluid"
                                 alt="Image">
@@ -712,7 +715,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project1ModalLabel">Project 1</h5>
+                                            id="project1ModalLabel">Procedural Modelling for Dungeon Levels</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
@@ -740,7 +743,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project2ModalLabel">Project 2</h5>
+                                            id="project2ModalLabel">Extenuating Circumstances Form System</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
@@ -768,7 +771,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project3ModalLabel">Project 3</h5>
+                                            id="project3ModalLabel">Mentor-Mentee System</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
@@ -796,7 +799,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project4ModalLabel">Project 4</h5>
+                                            id="project4ModalLabel">AI Movie Review Interpreter</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
@@ -824,7 +827,8 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project5ModalLabel">Project 5</h5>
+                                            id="project5ModalLabel">
+                                            Rental JSwing Application</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
@@ -852,7 +856,8 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="project6ModalLabel">Project 6</h5>
+                                            id="project6ModalLabel">
+                                            OpenGL Graphics Scene</h5>
                                         <button type="button" class="close"
                                             data-dismiss="modal"
                                             aria-label="Close">
