--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 Feel free to connect through my socials below!
                             </p>
 
-                            <a href="#" class="sim-btn btn-hover-new"
+                            <a href="uploads\Euan_Goodbrand_CV_resume.pdf" class="sim-btn btn-hover-new"
                                 data-text="Download CV"><span>Download CV</span></a>
                         </div>
                     </div>
