--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <!-- Video Background -->
     <video autoplay loop muted id="background-video">
         <source src="./images/jellyfish.webm" type="video/webm">
+        <source src="./images/jellyfish.mp4" type="video/mp4"> <!-- Fallback for browsers that do not support WebM -->
+        Your browser does not support the video tag.
     </video>
+
 
     <!-- LOADER -->
     <div id="preloader">
@@ -131,6 +134,8 @@
         <!-- Video Background -->
         <video autoplay loop muted id="background-video">
             <source src="./assets/jellyfish.webm" type="video/webm">
+            <source src="./assets/jellyfish.mp4" type="video/mp4"> <!-- Fallback for browsers that do not support WebM -->
+            Your browser does not support the video tag.
         </video>
         <div class="heading">
             <h1>hello i'm Euan Goodbrand</h1>
