Revert "Update index.html"
This reverts commit f2210f1f0f933b9c32842a1a6c9ceaa07afaa6f1.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         height: auto;
         z-index: -1; 
         transform: translate(-50%, -50%);
-        background: url('./images/jellyfish.png') no-repeat;
+        background: url('./assets/jellyfish.png') no-repeat;
         background-size: cover;
         filter: brightness(2.5);
     }
@@ -68,7 +68,7 @@
 <body id="page-top" class="politics_version">
     <!-- Video Background -->
     <video autoplay loop muted id="background-video">
-        <source src="./images/jellyfish.webm" type="video/webm">
+        <source src="./assets/jellyfish.webm" type="video/webm">
     </video>
 
     <!-- LOADER -->
