--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body id="page-top" class="politics_version">
     <!-- Video Background -->
     <video autoplay loop muted id="background-video">
-        <source src="./assets/jellyfish.webm" type="video/webm">
+        <source src="./assets/jellyfish.mp4" type="video/mp4">
     </video>
 
     <!-- LOADER -->
@@ -130,7 +130,7 @@
     <section id="home" class="main-banner parallaxie">
         <!-- Video Background -->
         <video autoplay loop muted id="background-video">
-            <source src="./assets/jellyfish.webm" type="video/webm">
+            <source src=".\images\jellyfish.mp4" type="video/mp4">
         </video>
         <div class="heading">
             <h1>hello i'm Euan Goodbrand</h1>
@@ -399,7 +399,6 @@
                                     class="fa fa-picture-o"></i></a>
                         </div>
                     </div>
-
                 </div>
 
                 <!-- Fifth Image Block -->
