--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Site Icons -->
 <link rel="shortcut icon" href="images/tab.png" type="image/x-icon" />
-<link rel="tab" href="images/tab.png">
+<link rel="tab" href="images/tab.png">f
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -68,7 +68,7 @@
 <body id="page-top" class="politics_version">
     <!-- Video Background -->
     <video autoplay loop muted id="background-video">
-        <source src="./assets/jellyfish (1).mp4" type="video/mp4">
+        <source src="./assets/jellyfish.mp4" type="video/mp4">
     </video>
 
     <!-- LOADER -->
