--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <section id="home" class="main-banner parallaxie">
         <!-- Video Background -->
         <video autoplay loop muted id="background-video">
-            <source src=".\images\jellyfish (1).mp4" type="video/mp4">
+            <source src=".\images\jellyfish.mp4" type="video/mp4">
         </video>
         <div class="heading">
             <h1>hello i'm Euan Goodbrand</h1>
