--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Site Icons -->
 <link rel="shortcut icon" href="images/tab.png" type="image/x-icon" />
-<link rel="tab" href="images/tab.png">f
+<link rel="tab" href="images/tab.png">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
