--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body id="page-top" class="politics_version">
     <!-- Video Background -->
     <video autoplay loop muted id="background-video">
-        <source src="./assets/jellyfish.mp4" type="video/mp4">
+        <source src="./assets/jellyfish3_low_res.mp4" type="video/mp4">
     </video>
 
     <!-- LOADER -->
