--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         height: auto;
         z-index: -1; 
         transform: translate(-50%, -50%);
-        background: url('./assets/jellyfish.png') no-repeat;
+        background: url('./images/jellyfish.png') no-repeat;
         background-size: cover;
         filter: brightness(2.5);
     }
@@ -68,9 +68,9 @@
 <body id="page-top" class="politics_version">
     <!-- Video Background -->
     <div id="video-container">
-        <video id="background-video" poster="./assets/jellyfish-poster.jpg" playsinline autoplay loop muted>
-            <source src="./assets/jellyfish3_low_res.webm" type="video/webm">
-            <source src="./assets/jellyfish3_low_res.mp4" type="video/mp4">
+        <video id="background-video" poster="./images/jellyfish-poster.jpg" playsinline autoplay loop muted>
+            <source src="./images/jellyfish3_low_res.webm" type="video/webm">
+            <source src="./images/jellyfish3_low_res.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
