--- a/index.html
+++ b/index.html
@@ -178,19 +178,10 @@
                 <div class="col-md-6">
                     <div class="message-box">
                         <h2>Euan Goodbrand</h2>
-                        <p>I am a software developer with a passion for AI
-                            and visual effects. </p>
-                        <p>I love to create visual effects in my free time
-                            such as the JellyFish animation seen on the
-                            homepage.
-
-                            I am constantly pursuing new technologies and
-                            would love to connect with like minded people.
-                            Feel free to connect through my socials below!
-                        </p>
-
-                        <a href="uploads\Euan_Goodbrand_CV_resume.pdf" class="sim-btn btn-hover-new"
-                            data-text="Download CV"><span>Download CV</span></a>
+                        <p>I am a Machine Learning Engineer with a passion for 
+                            simulations and visual effects. </p>
+<!--                         <a href="uploads\Euan_Goodbrand_CV_resume.pdf" class="sim-btn btn-hover-new"
+                            data-text="Download CV"><span>Download CV</span></a> -->
                     </div>
                 </div>
 
@@ -604,11 +595,6 @@
 
                     <div style="padding-top: 20px;">
                         <ul style="list-style-type: none; padding: 0;">
-                            <li style="color: #0277bd; padding: 10px 0;">
-                                <i class="fa fa-phone" aria-hidden="true"
-                                    style="color: #4dd0e1; margin-right: 10px;"></i>
-                                + 44 7956028983
-                            </li>
                             <li style="color: #0277bd; padding: 10px 0;">
                                 <i class="fa fa-at" aria-hidden="true"
                                     style="color: #4dd0e1; margin-right: 10px;"></i>
